// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`history component should render correctly 1`] = `
<div
  className="history-container"
>
  <div
    className="history-container__filters"
  >
    <div
      className="history-container__filter-group"
    >
      <button
        className="filter-button filter-button--selected"
        onClick={[Function]}
      >
        CLOSE
      </button>
      <button
        className="filter-button "
        onClick={[Function]}
      >
        OPEN
      </button>
      <button
        className="filter-button "
        onClick={[Function]}
      >
        HIGH
      </button>
      <button
        className="filter-button "
        onClick={[Function]}
      >
        LOW
      </button>
    </div>
    <div
      className="history-container__filter-group"
    >
      <button
        className="filter-button filter-button--selected"
        onClick={[Function]}
      >
        YTD
      </button>
      <button
        className="filter-button "
        onClick={[Function]}
      >
        1D
      </button>
      <button
        className="filter-button "
        onClick={[Function]}
      >
        1M
      </button>
      <button
        className="filter-button "
        onClick={[Function]}
      >
        6M
      </button>
      <button
        className="filter-button "
        onClick={[Function]}
      >
        1Y
      </button>
      <button
        className="filter-button "
        onClick={[Function]}
      >
        5Y
      </button>
    </div>
  </div>
  <div
    className="history-container__chart"
  >
    <div
      className="recharts-responsive-container chart-container"
      style={
        Object {
          "height": 420,
          "maxHeight": undefined,
          "minHeight": undefined,
          "minWidth": undefined,
          "width": "100%",
        }
      }
    >
      <div
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "visibility": "hidden",
            "zIndex": -1,
          }
        }
      >
        <div
          onScroll={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": -1,
            }
          }
        >
          <div
            style={
              Object {
                "height": NaN,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": NaN,
              }
            }
          />
        </div>
        <div
          onScroll={[Function]}
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
              "visibility": "hidden",
              "zIndex": -1,
            }
          }
        >
          <div
            style={
              Object {
                "height": "200%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "200%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`history component should render history chart correctly 1`] = `
<div
  className="recharts-responsive-container chart-container"
  style={
    Object {
      "height": 420,
      "maxHeight": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
        "visibility": "hidden",
        "zIndex": -1,
      }
    }
  >
    <div
      onScroll={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "visibility": "hidden",
          "zIndex": -1,
        }
      }
    >
      <div
        style={
          Object {
            "height": NaN,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": NaN,
          }
        }
      />
    </div>
    <div
      onScroll={[Function]}
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "visibility": "hidden",
          "zIndex": -1,
        }
      }
    >
      <div
        style={
          Object {
            "height": "200%",
            "left": 0,
            "position": "absolute",
            "top": 0,
            "width": "200%",
          }
        }
      />
    </div>
  </div>
</div>
`;
